Fixed search results display on smaller screens

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,6 +21,10 @@ img {
   border-radius: 5px;
 }
 
+#item-grid img {
+  width:100%;
+}
+
 #modal-search-results {
   overflow: auto;
   max-height: 300px;
@@ -54,6 +58,13 @@ img {
 @media only screen and (max-width: 992px) {
   .modal {
     width: 100%;
+    top:0;
+    height:100%;
+    max-height:none;
+  }
+
+  .modal-content {
+    height: calc(100% - 56px);
   }
 }
 
